WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103509
.libs/libwebkitgtk-3.0.so: undefined reference to `WebCore::validationMessageBadInputForNumberText()
https://bugs.webkit.org/show_bug.cgi?id=103509
Summary
.libs/libwebkitgtk-3.0.so: undefined reference to `WebCore::validationMessage...
Anton Obzhirov
Reported
2012-11-28 05:25:57 PST
Will attach fix now.
Attachments
Patch
(1.28 KB, patch)
2012-11-28 05:33 PST
,
Anton Obzhirov
no flags
Details
Formatted Diff
Diff
Patch
(1.26 KB, patch)
2012-11-28 06:41 PST
,
Anton Obzhirov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anton Obzhirov
Comment 1
2012-11-28 05:33:05 PST
Created
attachment 176462
[details]
Patch
Philippe Normand
Comment 2
2012-11-28 05:52:20 PST
Comment on
attachment 176462
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176462&action=review
> Source/WebCore/ChangeLog:8 > + Quick fix for build problem for WebKit/GTK.
Usually build fixes mention which revision introduced the break. Like, "GTK build fix after r???????"
Anton Obzhirov
Comment 3
2012-11-28 06:14:48 PST
Release was 136001. Will take into account in the future.(In reply to
comment #2
)
> (From update of
attachment 176462
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=176462&action=review
> > > Source/WebCore/ChangeLog:8 > > + Quick fix for build problem for WebKit/GTK. > > Usually build fixes mention which revision introduced the break. Like, "GTK build fix after r???????"
Release was 136001. Will take into account in the future.
Philippe Normand
Comment 4
2012-11-28 06:27:49 PST
Are you uploading a new patch then? Also the GTK builders don't appear more broken than usual, apart from the 32-bit bot but for different reason I believe.
Anton Obzhirov
Comment 5
2012-11-28 06:41:14 PST
Created
attachment 176478
[details]
Patch
Anton Obzhirov
Comment 6
2012-11-28 06:42:38 PST
Done. I do have build problem as my colleague here as well.
Philippe Normand
Comment 7
2012-11-28 06:49:36 PST
Comment on
attachment 176478
[details]
Patch Thanks!
Philippe Normand
Comment 8
2012-11-28 08:05:21 PST
Comment on
attachment 176478
[details]
Patch Clearing flags on attachment: 176478 Committed
r136010
: <
http://trac.webkit.org/changeset/136010
>
Philippe Normand
Comment 9
2012-11-28 08:05:26 PST
All reviewed patches have been landed. Closing bug.
Philippe Normand
Comment 10
2012-11-28 08:08:30 PST
The cq went wild it seems. I landed manually.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug