Fix .libs/libwebkitgtk-3.0.so: undefined reference to `WebCore::validationMessageBadInputForNumberText(). https://bugs.webkit.org/show_bug.cgi?id=103509

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2012-11-28
Reviewed by Philippe Normand.

GTK build fix after r136001.

* platform/gtk/LocalizedStringsGtk.cpp:
(WebCore::validationMessageBadInputForNumberText):
(WebCore):

git-svn-id: svn://svn.chromium.org/blink/trunk@136010 bbb929c8-8fbe-4397-9dbb-9b2b20218538