third_party/WebKit/Source/WebCore/platform/gtk/LocalizedStringsGtk.cpp
@@ -742,4 +742,10 @@ String localizedString(const char* key)
     return String::fromUTF8(key, strlen(key));
 }
 
+String validationMessageBadInputForNumberText()
+{
+    notImplemented();
+    return validationMessageTypeMismatchText();
+}
+
 }
